# haskell-programming-solutions

./: haskell-programming-solutions.cabal  haskell_programming_solutions.cabal  readme.md
ch_01/: chapter_exercises.txt
ch_02/: ex_02.txt  ex_03.txt  ex_04.hs
ch_03/: chapter_exercises.hs  ex_01.txt
ch_04/: chapter_exercises.hs  ex_01.hs  ex_02.txt
ch_05/: chapter_exercises.hs  ex_01.txt  ex_03.txt
ch_06/: chapter_exercises.hs  ex_01.hs  ex_03.txt
ch_07/: chapter_exercises.hs  ex_01.txt  ex_05.txt
ch_09/: ex_01.hs  ex_03.txt  ex_04.hs  ex_06.txt  ex_07.hs
ch_10/: ex_01.txt  ex_02.hs
ch_11/: chapter_exercises.hs  ex_03.txt  ex_08.hs  ex_09.hs
ch_12/: chapter_exercises.hs
src/: Utils.hs
src/ch01/: ChapterExercises.txt  Equivalence.txt
src/ch02/: ChapterExercises.hs  Practice.hs
src/ch03/: ChapterExercises.hs  Reverse.hs
src/ch04/: ChapterExercises.hs  MoodBlah.hs
src/ch05/: ApplyYourself.txt  ChapterExercises.hs  TypeArguments.txt
src/ch06/: ChapterExercises.hs  Instances.hs  TupleExperiment.txt
src/ch07/: CasePractice.hs  ChapterExercises.hs  Dodgy.hs
src/ch08/: ApplyTimes.txt  ChapterExercises.hs  NumbersToWords.hs
src/ch09/: BottomMadness.txt  Caesar.hs  ChapterExercises.hs  ComprehensionExercises.hs  Eft.hs  Filtering.hs  MyWords.hs  Zipping.hs
src/ch10/: ChapterExercises.hs  Database.hs  Scans.hs
src/ch11/: ChapterExercises.hs  DogTypes.txt  Example.txt  Gardener.hs  PityTheBool.txt  Programmers.hs  Quantum.hs  TooMany.hs  Tree.hs  Vehicles.hs  Vigenere.hs
src/ch12/: ChapterExercises.hs
src/ch13/: CaesarPrompt.hs  ChapterExercises.hs  CheckYourUnderstanding.txt  Hangman.hs  VigenerePrompt.hs
src/ch14/: Addition.hs  CiphersTest.hs  Generators.hs  HangmanTest.hs  Idempotence.hs  Morse.hs  MorsePrompt.hs  MorseTest.hs  UsingQuickCheck.hs  WordNumber.hs
src/ch15/: ChapterSolutions.hs  MadLibs.hs  (+5 more)
src/ch_14/chex/: README.md  chex.cabal
src/ch_14/chex/.stack-work/install/x86_64-osx/lts-9.2/8.0.2/flag-cache/: chex-0.1.0.0-4qcAWM2Y0PH3r8SnxaExdj  chex-0.1.0.0-KgUEtLxuEyGCiEynp3TqoJ
src/ch_14/chex/.stack-work/install/x86_64-osx/lts-9.2/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSchex-0.1.0.0-4qcAWM2Y0PH3r8SnxaExdj-ghc8.0.2.dylib
src/ch_14/chex/.stack-work/install/x86_64-osx/lts-9.2/8.0.2/lib/x86_64-osx-ghc-8.0.2/chex-0.1.0.0-4qcAWM2Y0PH3r8SnxaExdj/: Arithmetic.dyn_hi  Arithmetic.hi  ArithmeticTest.hi  Generators.dyn_hi  Generators.hi  Idempotence.dyn_hi  Idempotence.hi  UsingQuickCheck.dyn_hi  UsingQuickCheck.hi  WordNumber.dyn_hi  WordNumber.hi
src/ch_14/chex/.stack-work/install/x86_64-osx/lts-9.2/8.0.2/lib/x86_64-osx-ghc-8.0.2/chex-0.1.0.0-KgUEtLxuEyGCiEynp3TqoJ/: Ciphers.dyn_hi  Ciphers.hi  CiphersTest.hi  Generators.dyn_hi  Generators.hi  Hangman.dyn_hi  Hangman.hi  HangmanTest.dyn_hi  HangmanTest.hi  Idempotence.dyn_hi  UsingQuickCheck.hi  WordNumber.dyn_hi
src/ch_14/chex/.stack-work/install/x86_64-osx/lts-9.2/8.0.2/pkgdb/: chex-0.1.0.0-KgUEtLxuEyGCiEynp3TqoJ.conf  package.cache
src/ch_14/chex/src/: Ciphers.hs  CiphersTest.hs  Generators.hs  Hangman.hs  HangmanTest.hs  Idempotence.hs  UsingQuickCheck.hs  WordNumber.hs
(+130 files in other folders)
