name:                haskell-programming-solutions
version:             0.1.0.0
homepage:            https://github.com/njsfield/haskell-programming-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Field
maintainer:          njsfieldgithub@gmail.com
copyright:           2017 Nick Field
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , random
                     , containers
                     , scotty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/njsfield/haskell-programming-solutions
