name:                haskell-programming-solutions
version:             0.1.0.0
homepage:            https://github.com/njsfield/haskell-programming-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Field
maintainer:          njsfieldgithub@gmail.com
copyright:           2017 Nick Field
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , random
                     , checkers
                     , containers
  default-language:    Haskell2010
  exposed-modules:     Ch09.Caesar
                     , Ch11.Vigenere
                     , Ch13.Hangman
                     , Ch14.Morse
                     , Ch15.Optional
                     , Ch15.QuickChecking
                     , Ch15.Semigroups
                     , Ch16.FunctorLaws
                     , Ch17.List
                     , Utils

source-repository head
  type:     git
  location: https://github.com/njsfield/haskell-programming-solutions
