name:                chex
version:             0.1.0.0
homepage:            https://github.com/githubuser/chex#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Field
maintainer:          example@example.com
copyright:           2017 Nick Field
category:            Text 
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src 
  exposed-modules:     WordNumber 
                       UsingQuickCheck
                       Idempotence
                       Generators
                       Hangman
                       HangmanTest
                       Ciphers
                       CiphersTest
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , random
  default-language:    Haskell2010

